--- a/style.css
+++ b/style.css
@@ -455,3 +455,23 @@ circle.selected {
   fill: #ff6b6b;
 }
 
+.social-boxes {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin: 20px 0;
+}
+
+.box {
+  background-color: rgb(53, 48, 48);
+  color: white;
+  padding: 20px;
+  text-align: center;
+  height: 22px;
+  width: 150px;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+
